2006-04-02  Victor Stone  <fourstones@users.sourceforge.net>

	* ccadmin/index.php: bugfix: some servers don't like 
	      SCRIPT_URL

2006-04-02  Jon Phillips  <jon@creativecommons.org>

	* ChangeLog: updated changelog.

2006-04-02  Victor Stone  <fourstones@users.sourceforge.net>

	* cclib/cc-uploadapi.php: bugfix: upload broken if 'people' didn't 
	  already exist

2006-03-31  Victor Stone  <fourstones@users.sourceforge.net>

	* cclib/cc-ratings-admin.inc: mysql5 choked on ratings query

	* cclib/cc-admin.php: non-root installs were too easy to screw up 
	(take2), we were generating misleading info about rewrite

	* cclib/cc-contest-admin.inc cclib/cc-contest.php: SubmitSource was 
	broken, could not create a new contest

	* ccadmin/index.php: pnon-root installs were too easy to screw up

	* cclib/cc-pools.php: sample-ui switch was overriding install

	* cclib/cc-uploadapi.php: upload was broken on sharedhosts (e.g. 
	dreamhost) (now with Id)

2006-03-31  Jon Phillips  <jon@creativecommons.org>

	* VERSION cclib/cc-defines.php: Updated to new release working version
	2.1-SVN.

	* Makefile: Added PRESS.html generation...

2006-03-29  Jon Phillips  <jon@creativecommons.org>

	* VERSION cclib/cc-defines.php: Updated to new release working version
	2.1-CVS.

	* Makefile cchost.spec.in README NEWS.in PRESS.in: Updated to the new 
	release.

2006-03-28  Jon Phillips  <jon@creativecommons.org>

	* NEWS.in PRESS.in: Getting notes ready for release.
	
	* cclib/cc-defines.php: changed version number...almost release
	time...

	* Makefile.include: Added this common list of files needed by both
	makefiles...arg...

	* cchost.spec: Now we have rpm building and installation!!!

	* Makefile Makefile.dist: We now have proper installation and usage of
	the new Makefile.include

2006-03-27  Jon Phillips  <jon@creativecommons.org>

	* forum/*: cleared out the entire forum folder!!! Yeah!

	* cclib/magpie/*: cleared out the entire magpie directory!!! Yeah!!!
