@@ -25,6 +25,8 @@ DIST_FILES_OTHER=Makefile.dist
 
 all:	$(DIST_FILES_GENERATED) $(DIST_FILES_OTHER)
 	$(MAKE) -f Makefile.dist all
+
+press: all
 	[ -x `which txt2html` ] && txt2html --xhtml PRESS > PRESS.html
 
 install: all
@@ -32,6 +34,9 @@ install: all
 
 uninstall:
 	$(MAKE) -f Makefile.dist uninstall
+
+uninstall-all:
+	$(MAKE) -f Makefile.dist uninstall-all
 
 clean:
 	rm -f $(DIST_FILES_GENERATED)
