@@ -5,7 +5,7 @@
 # Copyright 2005-2006, Jon Phillips & Paul Howarth.
 # Copyright 2005-2006, Creative Commons.
 #
-# It basically just installs gotmail and the manpage into the
+# It basically just installs cchost into the
 # right places and also provides a mechanism to remove them.
 #
 # TODO: Need to make this Makefile more robust to install to the proper 
@@ -30,15 +30,25 @@ include Makefile.include
 all:	
 #$(APPNAME).1$(MANCOMPRESS)
 
-install: all
+install: all 
+	# This next line backs up cchost installed
+	@if test -d $(DESTDIR)$(WEBDIR); then \
+	    mv $(DESTDIR)$(WEBDIR) $(DESTDIR)$(WEBDIR)_`date +%F_%T`; \
+	else :; fi;
+	
 	$(INSTALL) -m 755 -d $(DESTDIR)$(WEBDIR)
-
+	
 	cp -Rfp $(DIST_FILES_STATIC) $(DIST_FILES_GENERATED) $(DIST_FOLDERS) \
 		$(DESTDIR)$(WEBDIR)
+
 
 uninstall:
 	rm -Rf $(DESTDIR)$(WEBDIR)
 #	rm $(DESTDIR)$(MANDIR)/$(APPNAME).1$(MANCOMPRESS)
+
+uninstall-all:
+	# this removes all folder starting with cchost in $(DESTDIR)
+	rm -Rf $(DESTDIR)$(WEBDIR)*
 
 clean:
 #	rm -f $(APPNAME).1$(MANCOMPRESS)
